# AgentHire

./: .coverage  .env.example  .gitignore  DEVELOPMENT.md  Makefile  README.md  STRUCTURE.md  WEEK1_TASKS.md  calc_sig2.py  calc_sig3.py  calc_sig4.py  calc_sig6.py  dashboard_optimization_report.md  diagnose_backend.py  docker-compose.prod.yml  docker-compose.yml  manual_test.py  package-lock.json.bak  package.json  read.md  test_auth.json  test_fernet.json  test_payload1.json  test_payload2.json  test_payload3.json  test_payload4.json  test_payload5.json  test_payload7.json  test_payload9.json  test_payload_app.json  test_reg.json  test_seeker_flow.py
.github/workflows/: ci.yml
.obsidian/: workspace.json
backend/: .dockerignore  CLAUDE.md  Dockerfile  Dockerfile.worker  README.md  pyproject.toml  requirements.txt  requirements_clean.txt  test_db.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: a2a.py  agents.py  api.py  applications.py  billing.py  claim.py  discover.py  enterprise.py  export.py  health.py  jobs.py  profiles.py  skill.py  stats.py  upload.py  users.py  webhook.py
backend/app/core/: cache.py  celery.py  database.py  exceptions.py  middleware.py  rate_limit.py  security.py
backend/app/middleware/: idempotency.py  request_id.py
backend/app/models/: __init__.py  application.py  application_event.py  audit_log.py  contact_unlock.py  credential.py  enterprise_verification.py  job_version.py  metering_event.py  principal.py  tenant.py
backend/app/schemas/: __init__.py  common.py
backend/app/services/: __init__.py  a2a_service.py  agent_service.py  application_service.py  audit_service.py  claim_service.py  contact_unlock_service.py  discovery_service.py  enterprise_service.py  enterprise_verification_service.py  export_service.py  identity_service.py  intent_parser.py  job_service.py  llm_client.py  matching_service.py  metering_service.py  notification_service.py  pdf_generator.py  profile_service.py  resume_analyzer.py  resume_parser.py  user_service.py  webhook_service.py
backend/app/tasks/: __init__.py  matching.py  notification.py  resume_parse.py
backend/app/utils/: pagination.py
backend/tests/: conftest.py  factories.py
backend/tests/unit/: test_application_service.py  test_contact_unlock_service.py  test_enterprise_verification_service.py
backend/tests/unit/services/: test_a2a_service.py  test_claim_service.py  test_enterprise_service.py  test_export_service.py  test_notification_service.py  test_user_service.py  test_webhook_service.py
database/: .dockerignore  .env.example  README.md  add_missing_columns.py  alembic.ini  check_agents.py  check_alembic.py  check_apikey.py  check_apikey2.py  check_schema.py  check_tables.py  create_apikey.py  design.md  docker-compose.yml  fix_agent_secret.py  fix_ev_status.py  fix_responsibilities.py  schema.sql
database/alembic/: env.py  script.py.mako
database/seeds/: 01_test_data.sql
database/sql/: 01_schema.sql
devops/: README.md
devops/docker/: .dockerignore
devops/init-scripts/: 00-full-schema.sql  01-init.sql  02-a2a-webhook-tables.sql  02-performance-indexes.sql
devops/nginx/: nginx.dev.conf  nginx.prod.conf
devops/redis/: redis.conf
devops/scripts/: init-db.sh  start.sh  validate-docker.sh
docs/: DEVELOPMENT-LOG.md  DEVELOPMENT_PLAN.md  PRD.md  README.md  contributing.md  deployment.md
docs/api/: README.md  authentication.md  claim.md  endpoints.md  enterprise.md  export.md  jobs.md  matching.md  profiles.md  skill.md  users.md
docs/handover/: AUDIT_LOG.md  DECISIONS.md  PROJECT_HANDOVER.md  ROADMAP_V1.md  SECURITY_STOPGAP.md
docs/plans/: 2026-04-07-project-takeover-plan.md
docs/remediation/: CRITICAL_ISSUES_REMEDIATION_PLAN.md
frontend/: CLAUDE.md  jest.config.js  next.config.ts  package-lock.json  package.json
scripts/: start-dev.sh
testing/: README.md
tests/: __init__.py  conftest.py  pytest.ini  utils.py
(+60 files in other folders)
